[package]
name = "finance_logger"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4.44", features = ["serde"] }
rayon = "1.12.0"
reqwest = { version = "0.13.2", features = ["blocking", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
structopt = { version = "0.3.26", features = ["color"] }
tokio = { version = "1.52.1", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["json"] }
yfinance-rs = "0.7.2"

[dev-dependencies]
mockito = "1.7.2"
quickcheck = "1.1.0"
